--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,30 +16,82 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "ModuleNotFoundError",
+                    "evalue": "No module named 'pandas'",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+                        "\u001b[1;32m/workspace/machine-learning-python-template/src/explore.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://marfurt1-machinelearnin-855pmfjxwbv.ws-us47.gitpod.io/workspace/machine-learning-python-template/src/explore.ipynb#ch0000001vscode-remote?line=0'>1</a>\u001b[0m \u001b[39m# Example reading the SQL database from here\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://marfurt1-machinelearnin-855pmfjxwbv.ws-us47.gitpod.io/workspace/machine-learning-python-template/src/explore.ipynb#ch0000001vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://marfurt1-machinelearnin-855pmfjxwbv.ws-us47.gitpod.io/workspace/machine-learning-python-template/src/explore.ipynb#ch0000001vscode-remote?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://marfurt1-machinelearnin-855pmfjxwbv.ws-us47.gitpod.io/workspace/machine-learning-python-template/src/explore.ipynb#ch0000001vscode-remote?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
+                        "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+                    ]
+                }
+            ],
             "source": [
                 "# Example reading the SQL database from here\n",
+                "import pandas as pd\n",
                 "\n",
-                "from utils import db_connect\n",
+                "import numpy as np\n",
+                "\n",
+                "import matplotlib.pyplot as plt\n",
+                "\n",
+                "import seaborn as sns\n",
+                "\n",
+                "\"\"\"from utils import db_connect\n",
                 "import pandas as pd\n",
                 "engine = db_connect()\n",
                 "\n",
                 "dataframe = pd.read_sql(\"Select * from books;\", engine)\n",
-                "print(dataframe.describe())"
+                "print(dataframe.describe())\"\"\""
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'pd' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                        "\u001b[1;32m/workspace/machine-learning-python-template/src/explore.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://marfurt1-machinelearnin-855pmfjxwbv.ws-us47.gitpod.io/workspace/machine-learning-python-template/src/explore.ipynb#ch0000002vscode-remote?line=0'>1</a>\u001b[0m \u001b[39m# Example importing the CSV here\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://marfurt1-machinelearnin-855pmfjxwbv.ws-us47.gitpod.io/workspace/machine-learning-python-template/src/explore.ipynb#ch0000002vscode-remote?line=1'>2</a>\u001b[0m df_airbnb \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39m../data/raw/AB_NYC_2019.csv\u001b[39m\u001b[39m'\u001b[39m)\n",
+                        "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+                    ]
+                }
+            ],
             "source": [
                 "# Example importing the CSV here\n",
-                "\n",
+                "df_airbnb = pd.read_csv('../data/raw/AB_NYC_2019.csv')\n",
                 "# dataframe = pd.read_csv('../path/to/file.csv')\n",
                 "# dataframe.describe()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 6,
+            "metadata": {},
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'my_df_describe' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+                        "\u001b[1;32m/workspace/machine-learning-python-template/src/explore.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://marfurt1-machinelearnin-855pmfjxwbv.ws-us47.gitpod.io/workspace/machine-learning-python-template/src/explore.ipynb#ch0000004vscode-remote?line=0'>1</a>\u001b[0m numeric_desc, categorical_desc \u001b[39m=\u001b[39m my_df_describe(df_airbnb,name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mairbnb\u001b[39m\u001b[39m'\u001b[39m,show \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m, save\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+                        "\u001b[0;31mNameError\u001b[0m: name 'my_df_describe' is not defined"
+                    ]
+                }
+            ],
+            "source": [
+                "numeric_desc, categorical_desc = my_df_describe(df_airbnb,name = 'airbnb',show = True, save=False)\n"
             ]
         }
     ],
